--- a/app/src/main/res/layout/activity_client_home.xml
+++ b/app/src/main/res/layout/activity_client_home.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activities.client.home.ClientHomeActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cliente Home"
+        android:text="Encerrar Sessão"
         android:layout_gravity="center"
         android:textSize="30sp"
         />
